k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-app-service
spec:
  selector:
    app: devops-app
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
